<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuMyGroups"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/Groups"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuCreateGroup"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/create_group"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuManageProfile"
        android:title="@string/manage_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuLogout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>