<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/noteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3pt"
        android:background="@drawable/background_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/noteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:paddingStart="10pt"
            android:text="@string/text"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btnDeleteNote"
                android:layout_width="40pt"
                android:layout_height="20pt"
                android:layout_marginEnd="10pt"
                android:layout_weight="1"
                android:contentDescription="@string/delete_button"
                app:srcCompat="@drawable/baseline_delete_black_24dp" />

            <ImageView
                android:id="@+id/btnUpdateNote"
                android:layout_width="40pt"
                android:layout_height="20pt"
                android:layout_weight="1"
                android:contentDescription="@string/edit_button"
                app:srcCompat="@drawable/baseline_create_black_24dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>