<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/groupList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/groupBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3pt"
        android:background="@drawable/background_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/groupAddUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/add_user"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/groupManageNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manage_notes"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>